--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,9 +12,10 @@
         android:id="@+id/textView2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-condensed-light"
         android:gravity="center"
         android:text="@string/app"
-        android:textColor="#FFFFFF"
+        android:textColor="#8BC34A"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -33,8 +34,8 @@
         android:layout_marginEnd="30dp"
         android:hint="@string/first"
         android:inputType="number"
-        android:textColor="#FFFFFF"
-        android:textColorHint="#FFFFFF"
+        android:textColor="#050505"
+        android:textColorHint="#8BC34A"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -50,8 +51,8 @@
         android:layout_marginEnd="30dp"
         android:hint="@string/second"
         android:inputType="number"
-        android:textColor="#FFFFFF"
-        android:textColorHint="#FFFFFF"
+        android:textColor="#070707"
+        android:textColorHint="#8BC34A"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -67,8 +68,8 @@
         android:layout_marginEnd="30dp"
         android:hint="@string/third"
         android:inputType="number"
-        android:textColor="#FFFFFF"
-        android:textColorHint="#FFFFFF"
+        android:textColor="#050505"
+        android:textColorHint="#8BC34A"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -82,7 +83,7 @@
         android:layout_width="156dp"
         android:layout_height="50dp"
         android:layout_marginEnd="30dp"
-        android:backgroundTint="#FFFFFF"
+        android:backgroundTint="#8BC34A"
         android:text="Add"
         android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -96,7 +97,7 @@
         android:id="@+id/btnsubtract"
         android:layout_width="163dp"
         android:layout_height="52dp"
-        android:backgroundTint="#FFFFFF"
+        android:backgroundTint="#8BC34A"
         android:text="Subtract"
         android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -111,7 +112,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
-        android:backgroundTint="#FFFFFF"
+        android:backgroundTint="#8BC34A"
         android:text="Multiply"
         android:textColor="#000000"
         app:layout_constraintBaseline_toBaselineOf="@+id/btndivide"
@@ -124,7 +125,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="29dp"
         android:layout_marginBottom="152dp"
-        android:backgroundTint="#FFFFFF"
+        android:backgroundTint="#8BC34A"
         android:text="Divide"
         android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
