--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -84,8 +84,9 @@
         android:layout_height="50dp"
         android:layout_marginEnd="30dp"
         android:backgroundTint="#8BC34A"
-        android:text="Add"
+        android:text="+"
         android:textColor="#000000"
+        android:textSize="26sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.564"
@@ -98,8 +99,9 @@
         android:layout_width="163dp"
         android:layout_height="52dp"
         android:backgroundTint="#8BC34A"
-        android:text="Subtract"
+        android:text="-"
         android:textColor="#000000"
+        android:textSize="27sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -113,8 +115,9 @@
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
         android:backgroundTint="#8BC34A"
-        android:text="Multiply"
+        android:text="*"
         android:textColor="#000000"
+        android:textSize="26sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/btndivide"
         app:layout_constraintEnd_toStartOf="@+id/btndivide"
         app:layout_constraintStart_toStartOf="parent" />
@@ -126,8 +129,9 @@
         android:layout_marginEnd="29dp"
         android:layout_marginBottom="152dp"
         android:backgroundTint="#8BC34A"
-        android:text="Divide"
+        android:text="/"
         android:textColor="#000000"
+        android:textSize="26sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btnmultiply" />
